--- a/src/components/pages/GamePage.scss
+++ b/src/components/pages/GamePage.scss
@@ -68,7 +68,7 @@
         height: $map-n-output-height;
       }
 
-      .ResizablePanel {
+      .ResizablePanel:first-child {
         display: grid;
 
         .MissionMap,
@@ -93,7 +93,7 @@
       position: relative;
       top: 50%;
       transform: translateY(-50%);
-      max-height: 300px;
+      max-height: 310px;
     }
 
     .ExecuteNodePath {
